--- a/static/css/main.css
+++ b/static/css/main.css
@@ -29,3 +29,7 @@
 .card:hover {
   box-shadow: 0 1rem 3rem rgba(0,0,0,.175) !important
 }
+
+.unclickable-card:hover {
+  box-shadow: 0 .125rem .25rem rgba(0,0,0,.075) !important;
+}
