--- a/templates/organiser_profile.html
+++ b/templates/organiser_profile.html
@@ -36,7 +36,7 @@
 	</div>
 
 	<div class="col p-4">
-		{% if eventlist | length != 0 and userinfo != None and userinfo.organiserid != None %} 
+		{% if eventlist | length != 0 %} 
 		<div class="row mb-3">
 			<div class="col-5">
 				<h4>Volunteers' Ages</h4>
