--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,11 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#">Find Opportunities!</a>
+            {% if userinfo == None or userinfo.usertype == 0 %}
+            <a class="nav-link" href="/events">Find Opportunities!</a>
+            {% else %}
+            <a class="nav-link" href="/events">View All Events</a>
+            {% endif %}
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Blog</a>
