--- a/templates/organiser_event.html
+++ b/templates/organiser_event.html
@@ -24,7 +24,7 @@
 			<div class="row card shadow-sm p-0 unclickable-card mb-3">
 				<h4 class="card-header p-3"> Editing {{eventinfo.eventid}} </h4>
 				<div class="card-body">
-					<form id="editform" action="" method="post" class="form-group">
+					<form id="editform" action="" method="post" class="form-group" enctype="multipart/form-data">
 						<label><b>Title:</b></label>
 						<div class="input-group mb-3">
 							<input type="text" name="title" class="form-control" placeholder="Title" aria-label="Title" value="{{eventinfo.title}}"></input>
@@ -75,6 +75,12 @@
 						<label><b>Image URL:</b></label>
 						<div class="input-group mb-3">
 							<input type="text" name="url" class="form-control" placeholder="Image URL" aria-label="Image URL" value="{{eventinfo.url}}"></input>
+						</div>
+
+						<label><b>Resources:</b></label>
+						<div class="input-group mb-3">
+							<input type="file" name="resources" accept=".zip">
+							<input type="submit" value="Upload" class="btn btn-secondary">
 						</div>
 
 						<div class="input-group mb-3">
