--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -166,10 +166,12 @@
 			</select>
 			</div>
 
+			{% if userinfo != None and userinfo['usertype'] == 0 %}
 			<div class="input-group mb-3">
 			<input class="form-check-input" type="checkbox" value="" aria-label="Checkbox for Sorting by Friends" name="friends" {%if 'friends' in request.form%} checked {%endif%}>
 			<label for="checkbox" class="ms-2"><b>Sort by number of friends taking part</b></label>
 			</div>
+			{% endif %}
 
 			<button type="submit" class="btn btn-primary">Filter</button>
 		</form>
