--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
             {% endif %}
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Blog</a>
+            <a class="nav-link" href="/blogs">Blog</a>
           </li>
         </ul>
         {% if not userinfo %}
