--- a/templates/blog_list.html
+++ b/templates/blog_list.html
@@ -39,7 +39,7 @@
 
     <div class="tab-content">
         <div id="all" class="container tab-pane active"><br>
-            <h2>  All Blogs </h2>
+            <h2>  All Blog Posts </h2>
             {% for post in posts %}
             <hr>
             <article id="post-{{post.blogid}}" class="post-{{post.blogid}} post type-post">
@@ -97,7 +97,7 @@
         {% if userinfo.usertype == 0 %}
 
         <div id="friends" class="container tab-pane fade"><br>
-            <h2>  All Blogs </h2>
+            <h2>  Friends' Blog Posts </h2>
             {% for post in posts %}
             {% if post.authorid in userinfo.friends %}
                 <hr>
@@ -155,7 +155,8 @@
         {% endif %}
 
         <div id="user" class="container tab-pane fade"><br>
-            {% for post in posts %}
+	    <h2>Your Blog Posts</h2>
+	    {% for post in posts %}
             {% if post.authorid == userinfo.username %}
                 <hr>
                 <article id="post-{{post.blogid}}" class="post-{{post.blogid}} post type-post">
