--- a/templates/user_event.html
+++ b/templates/user_event.html
@@ -54,6 +54,7 @@
 							<td> {{eventinfo.num_occurrences}} </td>
 						</tr>
 					</tbody></table>
+					<button class="btn btn-link" onclick="window.open('https://lifehack-materials.s3.us-west-2.amazonaws.com/{{eventinfo.eventid}}.zip')"> Download Resources </button>
 					<form id="registerform" action="" method="post" class="form-group">
 						{% if userinfo != None and userinfo.usertype == 0 %}
 						{% if userinfo['username'] not in eventinfo['participants'] %}
@@ -83,13 +84,13 @@
 							    <span class="close">&times;</span>
 							</div>
 							<div class="modal-body">
-								<a href="http://web.whatsapp.com/send?text=http://35.89.21.87/event/{{eventinfo.eventid}}%20Check%20out%20this%20volunteering%20event!" data-original-title="whatsapp" rel="tooltip" class="btn btn-primary" style="border-width: 0; background-color: #25D366;" data-placement="left">
+								<a href="http://web.whatsapp.com/send?text=http://35.89.21.87/event/{{eventinfo.eventid}}%20Check%20out%20this%20volunteering%20event!" data-original-title="whatsapp" rel="tooltip" class="btn btn-primary" style="border-width: 0; background-color: #25D366;" data-placement="left" target="_blank">
 									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
 										<path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
 									</svg>
 									Share
 								</a>
-								<script class="btn" async src="https://telegram.org/js/telegram-widget.js?19" data-telegram-share-url="http://35.89.21.87/event/{{eventinfo.eventid}}" data-comment="Check out this volunteering event!" data-size="large"></script>
+								<script class="btn" async src="https://telegram.org/js/telegram-widget.js?19" data-telegram-share-url="http://35.89.21.87/event/{{eventinfo.eventid}}" data-comment="Check out this volunteering event!" data-size="large" target="_blank"></script>
 							</div>
 						</div>
 					</div>
@@ -162,7 +163,11 @@
 				{% endif %}
 				</tbody>
 				</table>
+				{% if userinfo != None and userinfo['usertype'] == 1 and userinfo['organiserid'] == event.organiser %}
 				<a href="/edit_event/{{event.eventid}}" class="stretched-link"></a>
+				{% else %}
+				<a href="/event/{{event.eventid}}" class="stretched-link"></a>
+				{% endif %}
 			</div>
 		</div>
 		{% endfor %}
