--- a/templates/blog_list.html
+++ b/templates/blog_list.html
@@ -41,6 +41,7 @@
         <div id="all" class="container tab-pane active"><br>
             <h2>  All Blog Posts </h2>
             {% for post in posts %}
+	    {% if post.published %}
             <hr>
             <article id="post-{{post.blogid}}" class="post-{{post.blogid}} post type-post">
                 <header>
@@ -50,7 +51,7 @@
                 <img src="{{post.url}}">
                 {% endif %}
                 <div class="post-content">
-                    <p>{{post.shortContent}}</p>
+	    	    <p>{% autoescape false %} {{post.shortContent}} {% endautoescape %}</p>
                     <a href="/blog/{{post.blogid}}" class="more-link">Read More</a>
                 </div>
                 <br>
@@ -88,6 +89,7 @@
                     </a>
                 </footer>
             </article>
+	    {% endif %}
             {% endfor %}
             <hr>
             End of posts.
@@ -99,7 +101,7 @@
         <div id="friends" class="container tab-pane fade"><br>
             <h2>  Friends' Blog Posts </h2>
             {% for post in posts %}
-            {% if post.authorid in userinfo.friends %}
+            {% if post.authorid in userinfo.friends and post.published%}
                 <hr>
                 <article id="post-{{post.blogid}}" class="post-{{post.blogid}} post type-post">
                     <header>
@@ -109,7 +111,7 @@
                     <img src="{{post.url}}">
                     {% endif %}
                     <div class="post-content">
-                        <p>{{post.shortContent}}</p>
+	    	    	<p>{% autoescape false %} {{post.shortContent}} {% endautoescape %}</p>
                         <a href="/blog/{{post.blogid}}" class="more-link">Read More</a>
                     </div>
                     <br>
@@ -161,13 +163,13 @@
                 <hr>
                 <article id="post-{{post.blogid}}" class="post-{{post.blogid}} post type-post">
                     <header>
-                        <h3><a href="/blog/{{post.blogid}}">{{post.title}}</a></h3>
+			    <h3><a href="/blog/{{post.blogid}}">{{post.title}} {% if not post.published %} (Unpublished) {% endif %}</a></h3>
                     </header>
                     {% if post.url != None %}
                     <img src="{{post.url}}">
                     {% endif %}
                     <div class="post-content">
-                        <p>{{post.shortContent}}</p>
+	    	        <p>{% autoescape false %} {{post.shortContent}} {% endautoescape %}</p>
                         <a href="/blog/{{post.blogid}}" class="more-link">Read More</a>
                     </div>
                     <br>
