--- a/templates/organiser_event.html
+++ b/templates/organiser_event.html
@@ -56,7 +56,7 @@
 								<option value="Children and Youth" {%if eventinfo['type'] == "Children and Youth"%} selected {%endif%}>Children and Youth</option>
 								<option value="Seniors" {%if eventinfo['type'] == "Seniors"%} selected {%endif%}>Seniors</option>
 								<option value="Environment" {%if eventinfo['type'] == "Environment"%} selected {%endif%}>Environment</option>
-								<option value="Underprivileged People" {%if eventinfo['type'] == "Underprivileged People"%} selected {%endif%}>Underprivileged People</option>
+								<option value="Underprivileged" {%if eventinfo['type'] == "Underprivileged"%} selected {%endif%}>Underprivileged</option>
 								<option value="Arts and Heritage" {%if eventinfo['type'] == "Arts and Heritage"%} selected {%endif%}>Arts and Heritage</option>
 							</select>
 						</div>
