--- a/templates/blog_list.html
+++ b/templates/blog_list.html
@@ -20,199 +20,114 @@
 
 
 <div class="container-fluid col p-4">
-    <ul class="nav nav-tabs nav-justified" role="tablist">
-        <li class="nav-item">
-            <a class="nav-link active" data-bs-toggle="tab" href="#all">All Posts</a>
-        </li>
-        {% if userinfo != None %}
-        {% if userinfo.usertype == 0 %}
-        <li class="nav-item">
-            <a class="nav-link" data-bs-toggle="tab" href="#friends">Friends' Posts</a>
-        </li>
-        {% endif %}
+	<h2>  Blog Posts </h2>
 
-        <li class="nav-item">
-            <a class="nav-link" data-bs-toggle="tab" href="#user">Your Posts</a>
-        </li>
-        {% endif %}
-    </ul>
+	<form id="filterform" action="" method="post" class="form-group">
+		<div class="input-group mb-3">
+			<input type="text" name="name" class="form-control" placeholder="Name" aria-label="Name" value="{{authorname}}">
+		</div>
+		<label><b>User Type:</b></label>
+		<div class="container col d-flex flex-column input-group mb-3">
+			<div>
+				<input class="form-check-input" type="radio" value="volunteer" aria-label="radio button for volunteer">
+				<b>Volunteer</b>
+			</div>
+			<div>
+				<input class="form-check-input" type="radio" value="organiser" aria-label="radio button for organiser">
+				<b>Organiser</b>
+			</div>
+		</div>
+		<label for="tags"><b>Tags:</b></label>
+		<div class="container col d-flex flex-column input-group mb-3">
+			<div>
+				<input class="form-check-input" type="checkbox" value="" aria-label="Checkbox for Tag 1" name="Children and Youth" {% if "Children and Youth" in request.form %} checked="" {% endif %}>
+				<b>Children and Youth</b>
+			</div>
 
-    <div class="tab-content">
-        <div id="all" class="container tab-pane active"><br>
-            <h2>  All Blog Posts </h2>
-            {% for post in posts %}
-	    {% if post.published %}
-            <hr>
-            <article id="post-{{post.blogid}}" class="post-{{post.blogid}} post type-post">
-                <header>
-                    <h3><a href="/blog/{{post.blogid}}">{{post.title}}</a></h3>
-                </header>
-                {% if post.url != None %}
-                <img src="{{post.url}}">
-                {% endif %}
-                <div class="post-content">
-	    	    <p>{% autoescape false %} {{post.shortContent}} {% endautoescape %}</p>
-                    <a href="/blog/{{post.blogid}}" class="more-link">Read More</a>
-                </div>
-                <br>
-                <footer>
-                    <p>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
-                            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                        </svg>
-                        {% if post.authortype == 0%}
-                        <a href="/profile/{{post.authorid}}">{{post.authorname}}</a>
-                        {% else %}
-                        <a href="/org_profile/{{post.authorid}}">{{post.authorname}}</a>
-                        {% endif %}
+			<div>
+				<input class="form-check-input" type="checkbox" value="" aria-label="Checkbox for Tag 2" name="Seniors" {% if "Seniors" in request.form %} checked="" {% endif %}>
+				<b>Seniors</b>
+			</div>
+			<div>
+				<input class="form-check-input" type="checkbox" value="" aria-label="Checkbox for Tag 3" name="Environment" {% if "Environment" in request.form %} checked {% endif %} >
+				<b>Environment</b>
+			</div>
+			<div>
+				<input class="form-check-input" type="checkbox" value="" aria-label="Checkbox for Tag 4" name="Underprivileged" {% if "Underprivileged" in request.form %} checked {% endif %}>								
+				<b>Underprivileged</b>
+			</div>
+			<div>
+				<input class="form-check-input" type="checkbox" value="" aria-label="Checkbox for Tag 5" name="Arts and Heritage" {% if "Arts and Heritage" in request.form %} checked {% endif %}>
+				<b>Arts and Heritage</b>
+			</div>
+			<div>
+				<input class="form-check-input" type="checkbox" value="" aria-label="Checkbox for Tag 6" name="Personal" {% if "Personal" in request.form %} checked {% endif %}>
+				<b>Personal</b>
+			</div>
+			<div>
+				<input class="form-check-input" type="checkbox" value="" aria-label="Checkbox for Tag 7" name="Promotional" {%if "Promotional" in request.form %} checked {% endif %}>
+				<b>Promotional</b>
+			</div>
+		</div>
+		<input class="form-check-input" type="checkbox" value="" aria-label="Checkbox for friends" name="friends" {% if "friends" in request.form %} checked="" {% endif %}>
+		<b>Only show friends' blogs</b>
+	</form>
 
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-event-fill ms-3" viewBox="0 0 16 16">
-                            <path d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v1h16V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4V.5zM16 14V5H0v9a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2zm-3.5-7h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5z"/>
-                        </svg>
-                        {{post.date}}
-                    </p>
-                    {% if post.tags != None %}
-                    <p>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tags-fill" viewBox="0 0 16 16">
-                            <path d="M2 2a1 1 0 0 1 1-1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 2 6.586V2zm3.5 4a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
-                            <path d="M1.293 7.793A1 1 0 0 1 1 7.086V2a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l.043-.043-7.457-7.457z"/>
-                        </svg>
-                        {{post.tags}}
-                    </p>
-                    {% endif %}
-                    <a role="button" class="btn btn-outline-primary" href="/blog/{{post.blogid}}/#comment">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-dots" viewBox="0 0 16 16">
-                            <path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-                            <path d="m2.165 15.803.02-.004c1.83-.363 2.948-.842 3.468-1.105A9.06 9.06 0 0 0 8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6a10.437 10.437 0 0 1-.524 2.318l-.003.011a10.722 10.722 0 0 1-.244.637c-.079.186.074.394.273.362a21.673 21.673 0 0 0 .693-.125zm.8-3.108a1 1 0 0 0-.287-.801C1.618 10.83 1 9.468 1 8c0-3.192 3.004-6 7-6s7 2.808 7 6c0 3.193-3.004 6-7 6a8.06 8.06 0 0 1-2.088-.272 1 1 0 0 0-.711.074c-.387.196-1.24.57-2.634.893a10.97 10.97 0 0 0 .398-2z"/>
-                        </svg>
-                        Leave a Comment
-                    </a>
-                </footer>
-            </article>
-	    {% endif %}
-            {% endfor %}
-            <hr>
-            End of posts.
-        </div>
+	{% for post in posts %}
+	{% if post.published or (userinfo != None and userinfo.usertype == post.authortype and userinfo.name == post.authorname) %}
+	<hr>
+	<article id="post-{{post.blogid}}" class="post-{{post.blogid}} post type-post">
+		<header>
+			<h3><a href="/blog/{{post.blogid}}">{{post.title}} {% if not post.published %} (Unpublished) {% endif %}</a></h3>
+		</header>
+		{% if post.url != None %}
+		<img src="{{post.url}}">
+		{% endif %}
+		<div class="post-content">
+			<p>{% autoescape false %} {{post.shortContent}} {% endautoescape %}</p>
+			<a href="/blog/{{post.blogid}}" class="more-link">Read More</a>
+		</div>
+		<br>
+		<footer>
+			<p>
+			<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+				<path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+			</svg>
+			{% if post.authortype == 0%}
+			<a href="/profile/{{post.authorid}}">{{post.authorname}}</a>
+			{% else %}
+			<a href="/org_profile/{{post.authorid}}">{{post.authorname}}</a>
+			{% endif %}
 
-        {% if userinfo != None %}
-        {% if userinfo.usertype == 0 %}
+			<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-event-fill ms-3" viewBox="0 0 16 16">
+				<path d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v1h16V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4V.5zM16 14V5H0v9a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2zm-3.5-7h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5z"/>
+			</svg>
+			{{post.date}}
+			</p>
+			{% if post.tags != None %}
+			<p>
+			<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tags-fill" viewBox="0 0 16 16">
+				<path d="M2 2a1 1 0 0 1 1-1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 2 6.586V2zm3.5 4a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
+				<path d="M1.293 7.793A1 1 0 0 1 1 7.086V2a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l.043-.043-7.457-7.457z"/>
+			</svg>
+			{{post.tags}}
+			</p>
+			{% endif %}
+			<a role="button" class="btn btn-outline-primary" href="/blog/{{post.blogid}}#comment">
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-dots" viewBox="0 0 16 16">
+					<path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+					<path d="m2.165 15.803.02-.004c1.83-.363 2.948-.842 3.468-1.105A9.06 9.06 0 0 0 8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6a10.437 10.437 0 0 1-.524 2.318l-.003.011a10.722 10.722 0 0 1-.244.637c-.079.186.074.394.273.362a21.673 21.673 0 0 0 .693-.125zm.8-3.108a1 1 0 0 0-.287-.801C1.618 10.83 1 9.468 1 8c0-3.192 3.004-6 7-6s7 2.808 7 6c0 3.193-3.004 6-7 6a8.06 8.06 0 0 1-2.088-.272 1 1 0 0 0-.711.074c-.387.196-1.24.57-2.634.893a10.97 10.97 0 0 0 .398-2z"/>
+				</svg>
+				Leave a Comment
+			</a>
+		</footer>
+	</article>
+	{% endif %}
+	{% endfor %}
+	<hr>
+	End of posts.
+</div>
 
-        <div id="friends" class="container tab-pane fade"><br>
-            <h2>  Friends' Blog Posts </h2>
-            {% for post in posts %}
-            {% if post.authorid in userinfo.friends and post.published%}
-                <hr>
-                <article id="post-{{post.blogid}}" class="post-{{post.blogid}} post type-post">
-                    <header>
-                        <h3><a href="/blog/{{post.blogid}}">{{post.title}}</a></h3>
-                    </header>
-                    {% if post.url != None %}
-                    <img src="{{post.url}}">
-                    {% endif %}
-                    <div class="post-content">
-	    	    	<p>{% autoescape false %} {{post.shortContent}} {% endautoescape %}</p>
-                        <a href="/blog/{{post.blogid}}" class="more-link">Read More</a>
-                    </div>
-                    <br>
-                    <footer>
-                        <p>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
-                                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                            </svg>
-                            {% if post.authortype == 0%}
-                            <a href="/profile/{{post.authorid}}">{{post.authorname}}</a>
-                            {% else %}
-                            <a href="/org_profile/{{post.authorid}}">{{post.authorname}}</a>
-                            {% endif %}
-
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-event-fill ms-3" viewBox="0 0 16 16">
-                                <path d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v1h16V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4V.5zM16 14V5H0v9a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2zm-3.5-7h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5z"/>
-                            </svg>
-                            {{post.date}}
-                        </p>
-                        {% if post.tags != None %}
-                        <p>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tags-fill" viewBox="0 0 16 16">
-                                <path d="M2 2a1 1 0 0 1 1-1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 2 6.586V2zm3.5 4a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
-                                <path d="M1.293 7.793A1 1 0 0 1 1 7.086V2a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l.043-.043-7.457-7.457z"/>
-                            </svg>
-                            {{post.tags}}
-                        </p>
-                        {% endif %}
-                        <a role="button" class="btn btn-outline-primary" href="/blog/{{post.blogid}}/#comment">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-dots" viewBox="0 0 16 16">
-                                <path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-                                <path d="m2.165 15.803.02-.004c1.83-.363 2.948-.842 3.468-1.105A9.06 9.06 0 0 0 8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6a10.437 10.437 0 0 1-.524 2.318l-.003.011a10.722 10.722 0 0 1-.244.637c-.079.186.074.394.273.362a21.673 21.673 0 0 0 .693-.125zm.8-3.108a1 1 0 0 0-.287-.801C1.618 10.83 1 9.468 1 8c0-3.192 3.004-6 7-6s7 2.808 7 6c0 3.193-3.004 6-7 6a8.06 8.06 0 0 1-2.088-.272 1 1 0 0 0-.711.074c-.387.196-1.24.57-2.634.893a10.97 10.97 0 0 0 .398-2z"/>
-                            </svg>
-                            Leave a Comment
-                        </a>
-                    </footer>
-                </article>
-            {% endif %}
-            {% endfor %}
-            <hr>
-            End of posts.
-        </div>
-        {% endif %}
-
-        <div id="user" class="container tab-pane fade"><br>
-	    <h2>Your Blog Posts</h2>
-	    {% for post in posts %}
-            {% if post.authorid == userinfo.username %}
-                <hr>
-                <article id="post-{{post.blogid}}" class="post-{{post.blogid}} post type-post">
-                    <header>
-			    <h3><a href="/blog/{{post.blogid}}">{{post.title}} {% if not post.published %} (Unpublished) {% endif %}</a></h3>
-                    </header>
-                    {% if post.url != None %}
-                    <img src="{{post.url}}">
-                    {% endif %}
-                    <div class="post-content">
-	    	        <p>{% autoescape false %} {{post.shortContent}} {% endautoescape %}</p>
-                        <a href="/blog/{{post.blogid}}" class="more-link">Read More</a>
-                    </div>
-                    <br>
-                    <footer>
-                        <p>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
-                                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                            </svg>
-                            {% if post.authortype == 0%}
-                            <a href="/profile/{{post.authorid}}">{{post.authorname}}</a>
-                            {% else %}
-                            <a href="/org_profile/{{post.authorid}}">{{post.authorname}}</a>
-                            {% endif %}
-
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-event-fill ms-3" viewBox="0 0 16 16">
-                                <path d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v1h16V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4V.5zM16 14V5H0v9a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2zm-3.5-7h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5z"/>
-                            </svg>
-                            {{post.date}}
-                        </p>
-                        {% if post.tags != None %}
-                        <p>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tags-fill" viewBox="0 0 16 16">
-                                <path d="M2 2a1 1 0 0 1 1-1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 2 6.586V2zm3.5 4a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
-                                <path d="M1.293 7.793A1 1 0 0 1 1 7.086V2a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l.043-.043-7.457-7.457z"/>
-                            </svg>
-                            {{post.tags}}
-                        </p>
-                        {% endif %}
-                        <a role="button" class="btn btn-outline-primary" href="/blog/{{post.blogid}}/#comment">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-dots" viewBox="0 0 16 16">
-                                <path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-                                <path d="m2.165 15.803.02-.004c1.83-.363 2.948-.842 3.468-1.105A9.06 9.06 0 0 0 8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6a10.437 10.437 0 0 1-.524 2.318l-.003.011a10.722 10.722 0 0 1-.244.637c-.079.186.074.394.273.362a21.673 21.673 0 0 0 .693-.125zm.8-3.108a1 1 0 0 0-.287-.801C1.618 10.83 1 9.468 1 8c0-3.192 3.004-6 7-6s7 2.808 7 6c0 3.193-3.004 6-7 6a8.06 8.06 0 0 1-2.088-.272 1 1 0 0 0-.711.074c-.387.196-1.24.57-2.634.893a10.97 10.97 0 0 0 .398-2z"/>
-                            </svg>
-                            Leave a Comment
-                        </a>
-                    </footer>
-                </article>
-            {% endif %}
-            {% endfor %}
-            <hr>
-            End of posts.
-        </div>
-        {% endif %}
-    </div>
+</div>
 </div>
 {% endblock %}
