--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -41,14 +41,14 @@
 				<div class="carousel-item carousel-image-homepage">
 					<img src="https://media.discordapp.net/attachments/903191753086078997/994539290715496559/crop3.jpg" class="d-block w-100" alt="..." style="opacity:50%">
 					<div class="carousel-caption d-none d-md-block">
-						<h3>Join with one click.</h3>
+						<h3>Volunteers, join events with one click.</h3>
 						<p>No hassle required to source and sign up for new volunteering events. Spend more time on the things that truly matter, instead of arduous searching and sign-up processes.</p>
 					</div>
 				</div>
 				<div class="carousel-item carousel-image-homepage">
 					<img src="https://media.discordapp.net/attachments/903191753086078997/994539289935355914/crop1.jpg" class="d-block w-100" alt="..." style="opacity:50%">
 					<div class="carousel-caption d-none d-md-block">
-						<h3>Know your audience.</h3>
+						<h3>Organisers, know your audience.</h3>
 						<p>As an organiser, learn more about your volunteers and better engage people to join your events.</p>
 					</div>
 				</div>
@@ -105,10 +105,11 @@
 
 		<div class="col overflow-auto p-2 d-flex flex-column justify-content-center">
 			<h3>Want to view more information about your volunteering experience?</h3>
-			<a role="button" class="btn btn-primary" href="/profile/{{userinfo.username}}">Go To My Profile</a>
+			<a role="button" class="btn btn-primary btn-lg" href="/profile/{{userinfo.username}}">Go To My Profile</a>
 		</div>
 	</div>
 	<div class="row overflow-auto p-4 d-flex flex-row justify-content-center">
+		<hr>
 		<h2 style="text-align:center;">Top 5 Recommended Events for {{userinfo.username}}</h2>
 		{% for rec in topfive %}
 		<div class="card shadow-sm p-0 m-3" style="width:25vw;">
@@ -119,32 +120,34 @@
 				<tbody>
 				<tr>
 					<th scope="row" class="table-width-30"> Date </th>
-					<td> {{event.date}} </td>
+					<td> {{rec.date}} </td>
 				</tr>
 				<tr>
 					<th scope="row" class="table-width-30"> Organiser </th>
-					<td> {{event.organiser}} </td>
+					<td> {{rec.organiser}} </td>
 				</tr>
 				<tr>                                    
 					<th scope="row" class="table-width-30"> Type </th>
-					<td> {{event.type}} </td>
+					<td> {{rec.type}} </td>
 				</tr>
 				<tr>                                    
 					<th scope="row" class="table-width-30"> Location </th>
-					<td> {{event.location}} </td>
+					<td> {{rec.location}} </td>
 				</tr>
 				<tr>
                                         <th scope="row" class="table-width-30"> # of Your Friends </th>
-                                        <td> {{event.numfriends}} </td>
+                                        <td> {{rec.numfriends}} </td>
                                 </tr>
 				</tbody>
 				</table>
+				<a href="/event/{{rec.eventid}}" class="stretched-link"></a>
 			</div>
 		</div>
 		{% endfor %}
 	</div>
 	{% endif %}
 	<div class="row overflow-auto p-4 d-flex flex-row justify-content-center">
+		<hr>
 		<form id="filtereventsform" action="" method="post" class="form-group" style="width:60%">	
 			<h2 style="text-align:center">View/Filter Events!</h2>	
 			<label for="date"><b>Date Range:</b></label>
@@ -161,7 +164,7 @@
 				<option value="Children and Youth" {%if request.form['etype'] == "Children and Youth"%} selected {%endif%}>Children and Youth</option>
 				<option value="Seniors" {%if request.form['etype'] == "Seniors"%} selected {%endif%}>Seniors</option>
 				<option value="Environment" {%if request.form['etype'] == "Environment"%} selected {%endif%}>Environment</option>
-				<option value="Underprivileged People" {%if request.form['etype'] == "Underprivileged People"%} selected {%endif%}>Underprivileged People</option>
+				<option value="Underprivileged" {%if request.form['etype'] == "Underprivileged"%} selected {%endif%}>Underprivileged</option>
 				<option value="Arts and Heritage" {%if request.form['etype'] == "Arts and Heritage"%} selected {%endif%}>Arts and Heritage</option>
 			</select>
 			</div>
