--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -33,7 +33,7 @@
 					</tr>
 					{% endif %}
 					</tbody></table>
-					<form id="friendform" action="" method="post" class="form-group">
+					<form id="friendform" action="" method="post" class="form-group mb-3">
 						{% if profileinfo.username != userinfo.username and userinfo.usertype == 0 %}
 							{% if profileinfo['username'] not in userinfo['friends'] %}
 							<button type="submit" class="btn btn-primary">Add Friend</button>
@@ -42,6 +42,13 @@
 							{% endif %}
 						{% endif %}
 					</form>
+					<a role="button" class="btn btn-primary" href="http://35.89.21.87/blogs?user={{profileinfo.username}}">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-richtext" viewBox="0 0 16 16">
+  							<path d="M7 4.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0zm-.861 1.542 1.33.886 1.854-1.855a.25.25 0 0 1 .289-.047l1.888.974V7.5a.5.5 0 0 1-.5.5H5a.5.5 0 0 1-.5-.5V7s1.54-1.274 1.639-1.208zM5 9a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1H5zm0 2a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1H5z"/>
+  							<path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm10-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"/>
+						</svg>
+						View Blog Posts
+					</a>
 				</div>
 			</div>
 		</div>
